@@ -1,7 +1,10 @@
 [main]
+    hostname = {{cookiecutter.app_name}}
     host = 0.0.0.0
-    port = 8808
+    port = 5050
     pid = /run/lock/{{cookiecutter.app_name}}
 
 [performance]
+    # Don't change worker value, WIP, it can bite your wife and children
     workers = 1
+    backlog = 1024
