@@ -4,9 +4,11 @@ CHANGES
 0.3.0 (2014-10-26)
 ^^^^^^^^^^^^^^^^^^
 
-* First version of API-Hour, performance oriented version of aiorest.
+* First version of API-Hour, performance oriented version of aiorest
+* cookiecutter template
 * Serialization support
 * replace json by ujson
+* basic multiprocessing
 
 0.2.4 (2014-09-12)
 ^^^^^^^^^^^^^^^^^^
